--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
   <title>BlackNotes</title>
 </head>
 <body>
-  <h1>a test/h1>
+  <h1>a test</h1>
   <input type="text">
   <button>submit</button>
 </body>
