--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,9 @@
   <title>BlackNotes</title>
 </head>
 <body>
-  <h1>a test</h1>
-  <input type="text">
-  <button>submit</button>
+  <div class="main-contianer">
+    <h1>Hello</h1>
+    <input type="text">
+  </div>
 </body>
 </html>
