--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <div class="main-contianer">
-    <h1>Hello</h1>
-    <input type="text">
+    Hello i am a code
   </div>
 </body>
 </html>
