--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./popup-styles.css">
-  <title>BlockNotes</title>
+  <title>Bloc kNotes</title>
 </head>
 <body>
   <div class="main-contianer">
-    Hello i am a code
+    Block Note
   </div>
+  <script src="./contentScript.js"></script>
 </body>
 </html>
